# udacity-cloud-devops-capstone

./: README.md  README_bkup.md  index.html  index.js  notes.md
.circleci/: config.yml
backend/: .pre-commit-config.yaml  Dockerfile  Makefile  main.py  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt
ci_image/: Dockerfile  Dockerfile.bkup  Makefile
frontend/: Makefile  index.html  index.js  redirect.html
